# Approxiamate-Logic-Synthesis

./: .gitignore  CMakeLists.txt  README.md  Tree.h
MFFC/: CMakeLists.txt  basics.cpp  basics.h  bnet.cpp  bnet.h  convert_to_cpp.cpp  cudd_build_v2.cpp  cudd_build_v2.h  err_asses.cpp  find_print_candidate_MFFC.cpp  get_restPart_of_a_ckt.pl  interface.cpp  interface.h  main.cpp  net_algorithms.cpp  ntr.cpp  pattern_gen.cpp  pattern_gen.h  print_truth_table.cpp  print_truth_table.h  prof_sim.cpp  queue.cpp  queue.h  searchMFFC.cpp  searchMFFC.h
MFFC/head/: basics.h  bnet.h  find_print_candidate_MFFC.h
MFFC/testcases/: CMakeLists.txt  basics.h  generator_test.cpp
abc_expansion/: CMakeLists.txt  driver.cpp  ex_abc.cpp  ex_abc.h
approxiamate/: CMakeLists.txt
approxiamate/approx_common/: graph_common.h  graph_interface.h  tree_impl.h  truth_table.cpp
approxiamate/src/: CMakeLists.txt  boolean_function.cpp  boolean_function.h  conts.h  main.c  object.h  search.h  search_method_core.cpp  search_method_core.h  search_node.cpp  search_space.cpp  search_tree.cpp  test_boolean_function.cpp  tree.h
approxiamate/testcase/: CMakeLists.txt  boolean_function_test.cpp  predecomp_test.cpp  search_method_core_test.cpp  search_tree_test.cpp
blif_replace/: CMakeLists.txt  blif_replace.cpp  blif_replace.h
circuit/: CMakeLists.txt  convert_to_cpp.cpp  err_asses.cpp  err_asses.h  interface.cpp  interface.h  main.cpp  net_algorithms.cpp  prof_sim.cpp
circuit/mcnc_aig/: alu4.blif  alu4_mapped.blif  apex2.blif  apex2_mapped.blif  apex4.blif  apex4_mapped.blif  bigkey.blif  clma.blif  des.blif  diffeq.blif  dsip.blif  elliptic.blif  ex1010.blif  ex5p.blif  frisc.blif  misex3.blif  pdc.blif  s298.blif  s38417.blif  s38584.1.blif  seq.blif  spla.blif  tseng.blif
circuit/mcnc_fraig/: alu4.blif  apex2.blif  apex4.blif  apex4_mapped.blif  bigkey.blif  clma.blif  des.blif  diffeq.blif  dsip.blif  elliptic.blif  ex5p.blif  frisc.blif  misex3.blif  pdc.blif  s298.blif  s38417.blif  s38584.1.blif  seq.blif  tseng.blif
circuit/mcnc_original/: alu4_mapped.blif  apex2_mapped.blif
circuit/other_fraig/: 5xp1.blif  9sym.blif  9symml.blif  C1355.blif  C17.blif  C1908.blif  C2670.blif  C3540.blif  C432.blif  C499.blif  C5315.blif  C6288.blif  C7552.blif  C880.blif  alu2.blif  alu4.blif  apex1.blif  apex2.blif  apex3.blif  apex4.blif  apex5.blif  apex6.blif  apex7.blif  b1.blif  b12.blif  b9.blif  c8.blif  cc.blif  cht.blif  clip.blif  cm138a.blif  cm150a.blif  cm151a.blif  cm152a.blif  cm162a.blif  cm163a.blif  cm42a.blif  cm82a.blif  cm85a.blif  cmb.blif  (+68 more)
circuit/other_original/: C3540.blif  C432.blif  C499.blif  C5315.blif  alu4.blif  apex2.blif  apex3.blif  apex4.blif  apex5.blif  apex6.blif  apex7.blif  b12.blif  b9.blif  c8.blif  cc.blif  comp.blif  cordic.blif  cps.blif  dalu.blif  ex5p.blif  example2.blif  frg1.blif  frg2.blif  i2.blif  i3.blif  i5.blif  i6.blif  i7.blif  i8.blif  lal.blif  my_adder.blif  o64.blif  pcler8.blif  rot.blif  table3.blif  term1.blif  ttt2.blif  vg2.blif  x1.blif  x3.blif  (+1 more)
circuit_profile/: CMakeLists.txt  profile.cpp  profile.h  sim_profile.cpp  sim_profile.h
common/: BinaryTree.h  BinaryTree.hpp  CMakeLists.txt  Graph.h  LUT2.cpp  LUT2.h  OrderedQueue.h  binary_tree_impl.h  bitset_manipulate.h  blif_builder.cpp  blif_builder.h  boolean_tree.cpp  boolean_tree.h  common.h  common_test.cpp  data.cpp  data.h  dataset.h  dataset_impl.hpp  dummy.cpp  exception.h  generator.h  graph_common.h  graph_impl.h  graph_interface.h  memorize.h  resource.cpp  resource.h  static_utils.h  stopwatch.h  tree_impl.h  truth_table.cpp  truth_table.h  ttable.cpp  ttable.h  urandom.cpp  urandom.h
data/circuit/benchmark/: alu4.blif  apex2.blif
data/circuit/mcnc_aig/: alu4_mapped.blif  apex2_mapped.blif  apex4.blif  apex4_mapped.blif  misex3.blif  pdc.blif
data/circuit/mcnc_fraig/: alu4_mapped.blif  apex2_mapped.blif  ex1010.blif  spla.blif
data/circuit/mcnc_original/: apex4_mapped.blif
data/circuit/other_fraig/: 9sym.blif  apex1.blif  apex2.blif  apex5.blif  apex7.blif  b1.blif  b12.blif  b9.blif  c8.blif  cht.blif  clip.blif  cm138a.blif  cm151a.blif  cm82a.blif  cm85a.blif  con1.blif  cordic.blif  cps.blif  cu.blif  dalu.blif  decod.blif  duke2.blif  e64.blif  frg2.blif  i1.blif  i10.blif  i2.blif  i3.blif  i4.blif  i5.blif  i7.blif  i8.blif  i9.blif  lal.blif  ldd.blif  misex1.blif  misex2.blif  misex3.blif  mux.blif  my_adder.blif  (+14 more)
data/circuit/other_original/: C1355.blif  C1908.blif  C2670.blif  C6288.blif  C7552.blif  C880.blif  apex1.blif  cht.blif  count.blif  des.blif  duke2.blif  (+14 more)
driver/: CMakeLists.txt  abc_playground.cpp  decomp_small.cpp  filter_mffc.cpp  header.h  main.cpp  mffc.cpp  playground.cpp  pre_decomp.cpp  precomp_sim.cpp  verify_approximation.cpp  verify_simulator.cpp
lib/abc/: .hg_archival.txt  Makefile  arch_flags
lib/cudd-2.5.0/: CMakeLists.txt  Makefile
lib/cudd-3.0.0/: Makefile  config.status  libtool
lib/libblif/: CMakeLists.txt  bnet.cpp  bnet.h  interface.h  ntr.h
newApprox/: CMakeLists.txt
newApprox/src/: algorithm_decompose.cpp  algorithm_decompose.h  blif_builder.cpp  blif_builder.h  bool_function.cpp  bool_function.h  boolean_function.cpp  boolean_function.h  const.h  decomp_small.cpp  decomp_small.h  decomposition_info.h  kmap.cpp  kmap.h  min_set.h  node.h  proce.cpp  proce.h  truth_table.h  ttable.cpp  ttable.h
newApprox/testcase/: CMakeLists.txt  algorithm_decompose.cpp  algorithm_decompose_test.cpp  bool_function_test.cpp  kmap_test.cpp
policy/: CMakeLists.txt  ffc_selecit.cpp  policy.h
pre_decomp/: CMakeLists.txt  pre_decomp.cpp  pre_decomp.h
template/testcase/: CMakeLists.txt  graph_test.cpp
util/abc_demo/: CMakeLists.txt  demo.c
util/blif_info/: CMakeLists.txt  main.cpp
util/count/: CMakeLists.txt  main.cpp
util/gen_benchmarks/: CMakeLists.txt  main.cpp
util/precomp/: CMakeLists.txt  common.cpp  common.h  do_lut.cpp  do_lut.h  gen.cpp  interface.cpp  interface.h  lut3.cpp  lut3.h  lut3.h.bak  lut4.cpp  lut4.h  lut5.cpp  lut5.h  lut6.cpp  lut6.h  main.cpp
util/subDecCal/: CMakeLists.txt  main.cpp
(+248 files in other folders)
